--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^7.3.5",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.1",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
   },
